@@ -31,14 +31,23 @@ public class SearchServlet extends HttpServlet {
 	 * @see HttpServlet#doGet(HttpServletRequest request, HttpServletResponse response)
 	 */
 	protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
-		String keyword = request.getParameter("keyword");
-		FoodDAOimpl foodao = new FoodDAOimpl();
-		List<Food> result = foodao.findByName(keyword);
+		request.setCharacterEncoding("UTF-8");
 
-		List<Food> suggest = foodao.findByName(keyword)
-				.stream()
-				.limit(5)
-				.collect(java.util.stream.Collectors.toList());		request.setAttribute("foodlist", result);
+		String keyword = request.getParameter("keyword");
+		String categoryRaw = request.getParameter("categoryId");
+		String minRaw = request.getParameter("minPrice");
+		String maxRaw = request.getParameter("maxPrice");
+
+		Integer categoryId = (categoryRaw != null && !categoryRaw.isEmpty()) ? Integer.parseInt(categoryRaw) : null;
+		Double minPrice = (minRaw != null && !minRaw.isEmpty()) ? Double.parseDouble(minRaw) : null;
+		Double maxPrice = (maxRaw != null && !maxRaw.isEmpty()) ? Double.parseDouble(maxRaw) : null;
+		FoodDAOimpl foodao = new FoodDAOimpl();
+
+		List<Food> result = foodao.searchAdvanced(keyword, categoryId, minPrice, maxPrice);
+		// gợi ý 5 tên liên quan
+		List<Food>suggest = foodao.findByName(keyword).stream().limit(5).toList();
+		request.setAttribute("foodlist", result);
+
 		request.setAttribute("suggestList", suggest);
 		request.getRequestDispatcher("/views/jsp/Trangchu.jsp").forward(request, response);
 	}
